- Fix renewal of certificates for PKCS#12 certificates.
- Fix potential problem on writing files to certain export paths. 


ChangeLog for bytemine manager 2.2.3
=======================================
- Remove licence restrictions.


ChangeLog for bytemine manager 2.2.2
=======================================
- Fix a problem preventing the control center from opening any available channel.


ChangeLog for bytemine manager 2.2.1
=======================================
- Fix a potential problem that might generate an invalid certificate revocation list.
- The creation of OpenVPN configuration files is switched off by default. 


ChangeLog for bytemine manager 2.2.0
=======================================
- This application can also be run with Java version 7.
- Sending a custom command via control center has been improved, and is now
  able to display the resulting output.
- Static IPs can be assigned to users that are connected with an OpenVPN 
  concentrator.
- Opening an OpenVPN concentrator multiple times parallel is prohibited.
- The manual has been improved and updated.
- Revoked certificates can be re-enabled and therefor be re-used with a new user.
- Some problems with the user import have been fixed.
- OpenVPN concentrator configuration files are automatically created at create
  and update of a server.
- SSH communication has been improved, some minor issues with timeouts have been
  fixed.
- The summary dialog on user import is now showing the correct amount of 
  imported users and certificates.
- A servers CN and OU fields can be manually set with the server configuration 
  dialog. Until now the values from the root certificate were used.
- Server certificates can be renewed like user certificates.


ChangeLog for bytemine manager 2.1.4
=======================================

- Fix a potential problem with known_hosts file on Windows 7 systems. #2014
- Adjust height of status window for Windows systems.


ChangeLog for bytemine manager 2.1.3