@@ -1,3 +1,5 @@
+- In some occasions on Windows systems the export path was missing a 
+  trailing backslash.
 - Fix renewal of certificates for PKCS#12 certificates.
 - Fix potential problem on writing files to certain export paths. 
 
